# stock7

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/crawler-finlab/: README.md  main.py  pyproject.toml
terraform/: .terraform.lock.hcl  main.tf  variables.tf
